# inspectelement

./: .gitignore  README.md  SELECT_ACTIONS_CATALOG.md  SPRINT_10.md  SPRINT_10_1.md  SPRINT_5.md  SPRINT_7.md  SPRINT_8.md  SPRINT_9.md  SPRINT_9_1.md  TABLE_ACTIONS_CATALOG.md  __init__.py  pyproject.toml  requirements.txt
scripts/: build_exe.sh
src/inspectelement/: __main__.py  action_catalog.py  browser_manager.py  capture_guard.py  context_wizard.py  diff_preview_dialog.py  dom_extractor.py  embedded_inspector.py  hybrid_capture.py  import_parser.py  injector.py  java_helper_catalog.py  java_pom_writer.py  learning_store.py  locator_generator.py  locator_recommendation.py  main_window.py  models.py  name_suggester.py  override_logic.py  page_creator.py  project_discovery.py  scoring.py  (+5 more)
src/inspectelement.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_action_catalog.py  test_ancestor_promotion_pruning.py  test_browser_manager_helper.py  test_candidate_validation.py  test_capture_guard.py  test_class_utils.py  test_dynamic_id_selectors.py  test_embedded_inspector.py  test_hover_overlay_math.py  test_hybrid_capture.py  test_import_parser.py  test_java_helper_catalog.py  test_java_pom_writer.py  test_learning_overrides.py  test_locator_generation_quality.py  test_locator_recommendation.py  test_name_suggester.py  test_override_logic.py  test_page_creator.py  test_project_discovery.py  test_runtime_checks.py  test_scoring.py  test_table_root_detection.py  test_ui_state.py  test_validation.py  test_xpath_text_presence.py
