[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspectelement"
version = "0.1.0"
description = "Desktop Inspect Element for Automation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "inspectelement" }]
dependencies = [
  "playwright>=1.50.0",
  "PySide6>=6.7.0",
]

[project.scripts]
inspectelement = "inspectelement.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
